# pokeapi-sdk

./: .gitignore  README.md  pyproject.toml  test_local.py
src/pokeapi_sdk/: __init__.py  client.py
