[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pokeapi-sdk-ameya"  # Change 'yourname' to be unique on PyPI
version = "0.1.0"
authors = [
  { name="Your Name", email="you@example.com" },
]
description = "A simple Python SDK for the PokeAPI."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.20.0",
]